--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="info-3-part2 hidden">
                 <!-- Retirement age -->
                 <div class="retire-age">
-                  <h5>Investment Tenure (Years):</h5>
+                  <h5 style="text-align: center">Investment Tenure (Years):</h5>
                   <div class="button-input">
                     <div class="decrement">
                       <button class="decrease">
