--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
 
                 <!-- Investment Rate of Return -->
                 <div class="investment-rate">
-                  <h5>Expected Rate of Return (%)</h5>
+                  <h5 style="text-align: center">
+                    Expected Rate of Return (%)
+                  </h5>
                   <div class="button-input">
                     <div class="decrement">
                       <button class="decrease">
