--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
             <!-- This div has all bar element -->
             <div class="haveNeed">
               <!-- You will have bar -->
+              <div class="need">
+                <div class="need-bar">
+                  <div class="need-amount">0.28M</div>
+
+                  <div class="sub-need-bar"></div>
+                </div>
+                <p>Present Value of Total Investment</p>
+              </div>
               <div class="have">
                 <!-- Main Bar -->
                 <div class="have-bar">
@@ -190,17 +198,9 @@
                   <!-- Sub bar -->
                   <div class="sub-have-bar"></div>
                 </div>
-                <p>Future Value of Total Investment (BDT)</p>
+                <p>Future Value of Total Investment</p>
               </div>
               <!-- You will need bar -->
-              <div class="need">
-                <div class="need-bar">
-                  <div class="need-amount">0.28M</div>
-
-                  <div class="sub-need-bar"></div>
-                </div>
-                <p>Present Value of Total Investment (BDT):</p>
-              </div>
             </div>
             <hr />
           </div>
