--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 <!-- <input type="number" id="yearlyIncome" value="200000"> -->
                 <input type="number" id="monthlyIncome" value="100000" />
               </div>
-              Taka and Innitial bullet amount
+              Taka
+              <hr style="margin-top: 10px; margin-bottom: 10px" />
+
+              Innitial bullet amount
               <div class="input-div">
                 <input type="number" id="currentSavings" value="100000" />
               </div>
