--- a/index.html
+++ b/index.html
@@ -30,14 +30,20 @@
           <form id="form">
             <!-- Info Section 01 -->
             <div class="info-1">
-              I am
+              <!-- I am
               <div class="input-div">
                 <input type="number" id="age" value="25" />
               </div>
-              years old, my monthly income is
+              years old,  -->
+              My monthly income is
               <div class="input-div">
                 <!-- <input type="number" id="yearlyIncome" value="200000"> -->
-                <input type="number" id="monthlyIncome" value="100000" />
+                <input
+                  type="number"
+                  id="monthlyIncome"
+                  value="100000"
+                  style="width: 100px !important"
+                />
               </div>
               Taka
               <hr style="margin-top: 10px; margin-bottom: 10px" />
@@ -177,8 +183,8 @@
           <div class="verticale-progress">
             <div class="title">
               <h3>
-                Investment Tenure (Years):
-                <span class="retireAgeShow">3</span>?
+                Value of Your Investment after
+                <span class="retireAgeShow">3</span> Years:
               </h3>
             </div>
 
@@ -191,7 +197,7 @@
 
                   <div class="sub-need-bar"></div>
                 </div>
-                <p>Present Value of Total Investment</p>
+                <p>Total Investment Amount</p>
               </div>
               <div class="have">
                 <!-- Main Bar -->
@@ -201,7 +207,7 @@
                   <!-- Sub bar -->
                   <div class="sub-have-bar"></div>
                 </div>
-                <p>Future Value of Total Investment</p>
+                <p>Expected Value of Investment</p>
               </div>
               <!-- You will need bar -->
             </div>
