--- a/index.html
+++ b/index.html
@@ -213,7 +213,25 @@
             </div>
             <hr />
           </div>
-
+          <!-- <div>
+            <img src="" alt="" />
+          </div> -->
+          <div>
+            <p
+              style="
+                border: 1px solid red;
+                margin: 10px;
+                padding: 10px;
+                color: red;
+                text-align: center;
+                font-weight: bold;
+              "
+            >
+              Mutual Fund investments are subject to market risks, read all
+              scheme related documents carefully.<br />
+              <br />পুঁজিবাজারে বিনিয়োগ ঝুঁকিপূর্ণ । জেনে ও বুজে বিনিয়োগ করুন ।
+            </p>
+          </div>
           <!-- Horizontally Progress bar -->
           <div class="horizontal-progress" style="display: none">
             <!-- Title of the div -->
