--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
     <title>SIP Calculator</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -217,6 +224,13 @@
             <img src="" alt="" />
           </div> -->
           <div>
+            <img
+              src="images/Salman.jpeg"
+              alt=""
+              class="imgss img-fluid rounded mx-auto d-block"
+            />
+          </div>
+          <div>
             <p
               style="
                 border: 1px solid red;
@@ -327,5 +341,11 @@
     Phone No: 01638137520
 
     -->
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
