--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="number" id="age" value="25" />
               </div>
               years old,  -->
-              My monthly income is
+              I have a monthly income of BDT
               <div class="input-div">
                 <!-- <input type="number" id="yearlyIncome" value="200000"> -->
                 <input
@@ -56,7 +56,7 @@
               Taka
               <hr style="margin-top: 10px; margin-bottom: 10px" />
 
-              Innitial bullet amount
+              Initial 'Bullet' investment amount of BDT
               <div class="input-div">
                 <input
                   type="number"
@@ -75,7 +75,7 @@
             <div class="info-2">
               <div class="monthly-savings">
                 <h5 style="text-align: center">
-                  SIP Installment Amount Per Month (BDT):
+                  SIP Installment Amount per Month (BDT):
                 </h5>
                 <!-- Input with decrement and increment button -->
                 <div class="button-input">
@@ -260,7 +260,7 @@
             >
               Mutual Fund investments are subject to market risks, read all
               scheme related documents carefully.<br />
-              <br />পুঁজিবাজারে বিনিয়োগ ঝুঁকিপূর্ণ । জেনে ও বুজে বিনিয়োগ করুন ।
+              <br />পুঁজিবাজারে বিনিয়োগ ঝুঁকিপূর্ণ । জেনে ও বুঝে বিনিয়োগ করুন ।
             </p>
           </div>
           <!-- Horizontally Progress bar -->
