--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
 
       <div class="sub-container">
-        <div class="form">
+        <div class="form" style="background-color: #383834">
           <form id="form">
             <!-- Info Section 01 -->
-            <div class="info-1">
+            <div class="info-1" style="background-color: #4b4b47">
               <!-- I am
               <div class="input-div">
                 <input type="number" id="age" value="25" />
@@ -72,7 +72,7 @@
             </div>
 
             <!-- Info Section 02 -->
-            <div class="info-2">
+            <div class="info-2" style="background-color: #4b4b47; color: #fff">
               <div class="monthly-savings">
                 <h5 style="text-align: center">
                   SIP Installment Amount per Month (BDT):
@@ -80,18 +80,29 @@
                 <!-- Input with decrement and increment button -->
                 <div class="button-input">
                   <div class="decrement">
-                    <button class="decrease">
+                    <button
+                      class="decrease"
+                      style="border-radius: 07px 0px 0px 7px"
+                    >
                       <i class="fas fa-minus"></i>
                     </button>
                   </div>
                   <input
+                    style="
+                      background-color: #fff;
+                      color: black;
+                      font-weight: bold;
+                    "
                     type="number"
                     id="monthlySavings"
                     value="5000"
                     onkeydown="return (event.keyCode!=13)"
                   />
                   <div class="increment">
-                    <button class="increase">
+                    <button
+                      class="increase"
+                      style="border-radius: 0px 7px 7px 0px"
+                    >
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -101,7 +112,7 @@
               </div>
             </div>
 
-            <div class="info-3">
+            <div class="info-3" style="background-color: #4b4b47; color: #fff">
               <!-- part2 collapse or open button -->
               <!-- <div class="info-3-part1">
                 <h4>Optional</h4>
@@ -115,7 +126,10 @@
                   <h5 style="text-align: center">Investment Tenure (Years):</h5>
                   <div class="button-input">
                     <div class="decrement">
-                      <button class="decrease">
+                      <button
+                        class="decrease"
+                        style="border-radius: 07px 0px 0px 7px"
+                      >
                         <i class="fas fa-minus"></i>
                       </button>
                     </div>
@@ -126,7 +140,10 @@
                       onkeydown="return (event.keyCode!=13)"
                     />
                     <div class="increment">
-                      <button class="increase">
+                      <button
+                        class="increase"
+                        style="border-radius: 0px 7px 7px 0px"
+                      >
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
@@ -178,7 +195,10 @@
                   </h5>
                   <div class="button-input">
                     <div class="decrement">
-                      <button class="decrease">
+                      <button
+                        class="decrease"
+                        style="border-radius: 07px 0px 0px 7px"
+                      >
                         <i class="fas fa-minus"></i>
                       </button>
                     </div>
@@ -190,7 +210,10 @@
                       onkeydown="return (event.keyCode!=13)"
                     />
                     <div class="increment">
-                      <button class="increase">
+                      <button
+                        class="increase"
+                        style="border-radius: 0px 7px 7px 0px"
+                      >
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
